Add tests; refactor code slightly to allow better code sharing; misc minor test improvements