@@ -11,6 +11,7 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import jakarta.ws.rs.BadRequestException;
@@ -20,14 +21,11 @@ import jakarta.ws.rs.NotFoundException;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import org.broadinstitute.consent.http.AbstractTestHelper;
 import org.broadinstitute.consent.http.db.DarCollectionDAO;
@@ -85,7 +83,9 @@ class DarCollectionServiceTest extends AbstractTestHelper {
 
   @BeforeEach
   void setUp() {
-    initService();
+    service = new DarCollectionService(darCollectionDAO, darCollectionServiceDAO, datasetDAO,
+        electionDAO, dataAccessRequestDAO, emailService, voteDAO, matchDAO,
+        darCollectionSummaryDAO);
   }
 
   @Test
@@ -98,7 +98,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
         .sorted()
         .toList();
 
-    when(datasetDAO.findDatasetsByIdList(anyList())).thenReturn(new ArrayList<>(datasets));
+    when(datasetDAO.findDatasetsByIdList(anyList())).thenReturn(List.copyOf(datasets));
     when(dataAccessRequestDAO.findAllDARDatasetRelations(any())).thenReturn(datasetIds);
 
     collections = service.addDatasetsToCollections(collections, List.of());
@@ -124,7 +124,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     List<Integer> datasetIds = datasets.stream()
         .map(Dataset::getDatasetId)
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     Dataset dataset = new Dataset();
     dataset.setDatasetId(datasetIds.get(0));
@@ -157,7 +157,11 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
 
-    DarCollection canceledCollection = service.cancelDarCollectionAsResearcher(collection);
+    User user = new User();
+    user.setUserId(1);
+    collection.setCreateUserId(user.getUserId());
+    when(electionDAO.findLastElectionsByReferenceIds(anyList())).thenReturn(List.of());
+    DarCollection canceledCollection = service.cancelDarCollectionElections(user, collection, UserRoles.RESEARCHER);
     for (DataAccessRequest collectionDar : canceledCollection.getDars().values()) {
       assertEquals("canceled", collectionDar.getData().getStatus().toLowerCase());
     }
@@ -173,7 +177,12 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
 
-    assertThrows(BadRequestException.class, () -> service.cancelDarCollectionAsResearcher(collection));
+    User user = new User();
+    user.setUserId(1);
+    collection.setCreateUserId(user.getUserId());
+    assertThrows(
+        BadRequestException.class,
+        () -> service.cancelDarCollectionElections(user, collection, UserRoles.RESEARCHER));
   }
 
   @Test
@@ -183,18 +192,20 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequestData data = new DataAccessRequestData();
     dar.setData(data);
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     when(electionDAO.findLastElectionsByReferenceIds(anyList())).thenReturn(List.of());
     when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
-    initService();
 
-    service.cancelDarCollectionAsResearcher(collection);
-    verify(electionDAO, times(1)).findLastElectionsByReferenceIds(anyList());
+    User user = new User();
+    user.setUserId(1);
+    collection.setCreateUserId(user.getUserId());
+    service.cancelDarCollectionElections(user, collection, UserRoles.RESEARCHER);
+    verify(electionDAO).findLastElectionsByReferenceIds(anyList());
     verify(electionDAO, times(0)).updateElectionById(anyInt(), anyString(), any());
-    verify(dataAccessRequestDAO, times(1)).cancelByReferenceIds(anyList());
-    verify(darCollectionDAO, times(1)).findDARCollectionByCollectionId(anyInt());
+    verify(dataAccessRequestDAO).cancelByReferenceIds(anyList());
+    verify(darCollectionDAO).findDARCollectionByCollectionId(anyInt());
   }
 
   @Test
@@ -204,16 +215,21 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequestData data = new DataAccessRequestData();
     dar.setData(data);
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     Election election = createMockElection();
     election.setReferenceId(dar.getReferenceId());
     election.setStatus(ElectionStatus.OPEN.getValue());
     election.setElectionId(1);
+    User user = new User();
+    user.setUserId(1);
+    collection.setCreateUserId(user.getUserId());
     when(electionDAO.findLastElectionsByReferenceIds(anyList())).thenReturn(List.of(election));
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
 
-    assertThrows(BadRequestException.class, () -> service.cancelDarCollectionAsResearcher(collection));
+    assertThrows(
+        BadRequestException.class,
+        () -> service.cancelDarCollectionElections(user, collection, UserRoles.RESEARCHER));
   }
 
   @Test
@@ -223,7 +239,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequestData data = new DataAccessRequestData();
     dar.setData(data);
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     Election election = createMockElection();
     election.setReferenceId(dar.getReferenceId());
     election.setStatus(ElectionStatus.OPEN.getValue());
@@ -233,11 +249,11 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
 
-    service.cancelDarCollectionElectionsAsAdmin(collection);
-    verify(electionDAO, times(1)).findOpenElectionsByReferenceIds(anyList());
-    verify(electionDAO, times(1)).updateElectionById(anyInt(), anyString(), any());
+    service.cancelDarCollectionElections(new User(), collection, UserRoles.ADMIN);
+    verify(electionDAO).findOpenElectionsByReferenceIds(anyList());
+    verify(electionDAO).updateElectionById(anyInt(), anyString(), any());
     verify(dataAccessRequestDAO, times(0)).cancelByReferenceIds(anyList());
-    verify(darCollectionDAO, times(1)).findDARCollectionByCollectionId(anyInt());
+    verify(darCollectionDAO).findDARCollectionByCollectionId(anyInt());
   }
 
   @Test
@@ -252,7 +268,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     dar.addDatasetId(dataset.getDatasetId());
     dar.setData(data);
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     Election election = createMockElection();
     election.setReferenceId(dar.getReferenceId());
     election.setStatus(ElectionStatus.OPEN.getValue());
@@ -264,12 +280,12 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
         .thenReturn(new DarCollectionSummary());
 
-    service.cancelDarCollectionElectionsAsChair(collection, user);
-    verify(datasetDAO, times(1)).findDatasetIdsByDACUserId(anyInt());
-    verify(electionDAO, times(1)).findOpenElectionsByReferenceIds(anyList());
-    verify(electionDAO, times(1)).updateElectionById(anyInt(), anyString(), any());
+    service.cancelDarCollectionElections(user, collection, UserRoles.CHAIRPERSON);
+    verify(datasetDAO).findDatasetIdsByDACUserId(anyInt());
+    verify(electionDAO).findOpenElectionsByReferenceIds(anyList());
+    verify(electionDAO).updateElectionById(anyInt(), anyString(), any());
     verify(dataAccessRequestDAO, times(0)).cancelByReferenceIds(anyList());
-    verify(darCollectionDAO, times(1)).findDARCollectionByCollectionId(anyInt());
+    verify(darCollectionDAO).findDARCollectionByCollectionId(anyInt());
   }
 
   @Test
@@ -284,19 +300,48 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     dar.addDatasetId(dataset.getDatasetId());
     dar.setData(data);
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     Election election = createMockElection();
     election.setReferenceId(dar.getReferenceId());
     election.setStatus(ElectionStatus.OPEN.getValue());
     election.setElectionId(1);
     when(datasetDAO.findDatasetIdsByDACUserId(anyInt())).thenReturn(List.of());
+    when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(collection.getDarCollectionId()))
+        .thenReturn(new DarCollectionSummary());
 
-    service.cancelDarCollectionElectionsAsChair(collection, user);
-    verify(datasetDAO, times(1)).findDatasetIdsByDACUserId(anyInt());
-    verify(electionDAO, times(0)).findLastElectionsByReferenceIds(anyList());
-    verify(electionDAO, times(0)).updateElectionById(anyInt(), anyString(), any());
-    verify(dataAccessRequestDAO, times(0)).cancelByReferenceIds(anyList());
-    verify(darCollectionDAO, times(0)).findDARCollectionByCollectionId(anyInt());
+    service.cancelDarCollectionElections(user, collection, UserRoles.CHAIRPERSON);
+    verify(datasetDAO).findDatasetIdsByDACUserId(anyInt());
+    verifyNoMoreInteractions(electionDAO);
+    verifyNoInteractions(dataAccessRequestDAO, darCollectionDAO);
+  }
+
+  // Tests: getSummariesForRole, getSummaryForRoleByCollectionId: admin, signing official, chairperson, with progress report
+
+  @Test
+  void cancelDarCollectionElections_ProgressReport() {
+    DarCollection collection = createMockCollections().get(0);
+    collection.addDar(new DataAccessRequest());
+    DarCollectionSummary summary = new DarCollectionSummary();
+    summary.addParentChildRelationship(123, "456");
+    summary.setSubmissionDate(new Timestamp(0));
+    when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(
+            collection.getDarCollectionId()))
+        .thenReturn(summary);
+    assertThrows(
+        BadRequestException.class,
+        () -> service.cancelDarCollectionElections(null, collection, UserRoles.RESEARCHER));
+  }
+
+  @Test
+  void cancelDarCollectionElections_NoDars() {
+    DarCollection collection = new DarCollection();
+    collection.setDarCollectionId(123);
+    when(darCollectionSummaryDAO.getDarCollectionSummaryByCollectionId(
+            collection.getDarCollectionId()))
+        .thenReturn(new DarCollectionSummary());
+    var newCollection = service.cancelDarCollectionElections(null, collection, UserRoles.RESEARCHER);
+    assertEquals(collection, newCollection);
+    verifyNoInteractions(electionDAO);
   }
 
   @Test
@@ -306,16 +351,16 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     when(darCollectionServiceDAO.createElectionsForDarCollection(any(), any())).thenReturn(
         List.of("electionId"));
     when(voteDAO.findVoteUsersByElectionReferenceIdList(any())).thenReturn(List.of(new User()));
 
     service.createElectionsForDarCollection(user, collection);
-    verify(darCollectionServiceDAO, times(1)).createElectionsForDarCollection(any(), any());
-    verify(voteDAO, times(1)).findVoteUsersByElectionReferenceIdList(any());
-    verify(emailService, times(1)).sendDarNewCollectionElectionMessage(any(), any());
-    verify(darCollectionDAO, times(1)).findDARCollectionByCollectionId(any());
+    verify(darCollectionServiceDAO).createElectionsForDarCollection(any(), any());
+    verify(voteDAO).findVoteUsersByElectionReferenceIdList(any());
+    verify(emailService).sendDarNewCollectionElectionMessage(any(), any());
+    verify(darCollectionDAO).findDARCollectionByCollectionId(any());
   }
 
   @Test
@@ -325,7 +370,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
 
     assertThrows(IllegalStateException.class, () -> service.createElectionsForDarCollection(user, collection));
   }
@@ -337,7 +382,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DataAccessRequest dar = new DataAccessRequest();
     dar.setReferenceId(UUID.randomUUID().toString());
     DarCollection collection = createMockCollections().get(0);
-    collection.setDars(Map.of(dar.getReferenceId(), dar));
+    collection.addDar(dar);
     List<String> electionIds = List.of("electionId");
     when(darCollectionServiceDAO.createElectionsForDarCollection(user, collection)).thenReturn(
         electionIds);
@@ -362,7 +407,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     collection.setDarCollectionId(10);
     collection.setCreateUserId(user.getUserId());
 
-    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(new ArrayList<>());
+    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(List.of());
     when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
 
     Integer collectionId = collection.getDarCollectionId();
@@ -371,11 +416,11 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     service.deleteByCollectionId(user, collectionId);
 
     // verify each DAR was deleted
-    verify(dataAccessRequestDAO, times(1)).deleteByReferenceIds(any());
-    verify(dataAccessRequestDAO, times(1)).deleteDARDatasetRelationByReferenceIds(any());
-    verify(matchDAO, times(1)).deleteMatchesByPurposeIds(any());
+    verify(dataAccessRequestDAO).deleteByReferenceIds(any());
+    verify(dataAccessRequestDAO).deleteDARDatasetRelationByReferenceIds(any());
+    verify(matchDAO).deleteMatchesByPurposeIds(any());
     // verify overarching collection was deleted
-    verify(darCollectionDAO, times(1)).deleteByCollectionId(collectionId);
+    verify(darCollectionDAO).deleteByCollectionId(collectionId);
     verify(electionDAO, times(0)).deleteElectionsByIds(any());
     verify(voteDAO, times(0)).deleteVotesByReferenceIds(any());
 
@@ -392,10 +437,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     collection.setDarCollectionId(10);
     collection.setCreateUserId(user.getUserId());
 
-    Election e = createMockElection();
-    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(new ArrayList<>() {{
-      add(e);
-    }});
+    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(List.of(createMockElection()));
     when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
 
     Integer collectionId = collection.getDarCollectionId();
@@ -413,22 +455,19 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     DarCollection collection = generateMockDarCollection(datasets);
     collection.setDarCollectionId(10);
 
-    Election e = createMockElection();
-    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(new ArrayList<>() {{
-      add(e);
-    }});
+    when(electionDAO.findElectionsByReferenceIds(any())).thenReturn(List.of(createMockElection()));
     when(darCollectionDAO.findDARCollectionByCollectionId(any())).thenReturn(collection);
 
     Integer collectionId = collection.getDarCollectionId();
 
     service.deleteByCollectionId(user, collectionId);
 
-    verify(dataAccessRequestDAO, times(1)).deleteByReferenceIds(any());
-    verify(dataAccessRequestDAO, times(1)).deleteDARDatasetRelationByReferenceIds(any());
-    verify(matchDAO, times(1)).deleteMatchesByPurposeIds(any());
-    verify(darCollectionDAO, times(1)).deleteByCollectionId(collectionId);
-    verify(electionDAO, times(1)).deleteElectionsByIds(any());
-    verify(voteDAO, times(1)).deleteVotesByReferenceIds(any());
+    verify(dataAccessRequestDAO).deleteByReferenceIds(any());
+    verify(dataAccessRequestDAO).deleteDARDatasetRelationByReferenceIds(any());
+    verify(matchDAO).deleteMatchesByPurposeIds(any());
+    verify(darCollectionDAO).deleteByCollectionId(collectionId);
+    verify(electionDAO).deleteElectionsByIds(any());
+    verify(voteDAO).deleteVotesByReferenceIds(any());
   }
 
 
@@ -547,10 +586,11 @@ class DarCollectionServiceTest extends AbstractTestHelper {
   @Test
   void testProcessDarCollectionSummariesForResearcher() {
 
-    //summaryOne -> in review (elections present)
-    //summaryTwo -> no elections
-    //summaryThree -> no elections, canceled
-    //summaryThree -> draft
+    // summaryOne -> in review (elections present)
+    // summaryTwo -> no elections
+    // summaryThree -> no elections, canceled
+    // summaryFour -> dar collection is a progress report
+    // summaryFive -> draft
 
     User user = new User();
     user.setUserId(1);
@@ -581,24 +621,30 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     summaryThree.addDatasetId(datasetFive.getDatasetId());
     summaryThree.addStatus(DarStatus.CANCELED.getValue(), randomAlphabetic(3));
 
+    DarCollectionSummary summaryFour = new DarCollectionSummary();
+    {
+      summaryFour.setSubmissionDate(new Timestamp(0));
+      summaryFour.addParentChildRelationship(123, "456");
+      Election election = new Election();
+      election.setElectionId(234);
+      election.setStatus(ElectionStatus.OPEN.getValue());
+      summaryFour.addElection(election);
+    }
+
     DataAccessRequest draft = new DataAccessRequest();
     draft.setCreateDate(new Timestamp(new Date().getTime()));
     DataAccessRequestData data = new DataAccessRequestData();
     data.setProjectTitle(randomAlphabetic(10));
     data.setCreateDate(draft.getCreateDate().getTime());
     draft.setData(data);
-    List<DarCollectionSummary> mockSummaries = new ArrayList<>();
-    mockSummaries.add(summaryOne);
-    mockSummaries.add(summaryTwo);
-    mockSummaries.add(summaryThree);
     when(dataAccessRequestDAO.findAllDraftsByUserId(any())).thenReturn(List.of(draft));
     when(darCollectionSummaryDAO.getDarCollectionSummariesForResearcher(any())).thenReturn(
-        mockSummaries);
+        List.of(summaryOne, summaryTwo, summaryThree, summaryFour));
 
     List<DarCollectionSummary> summaries = service.getSummariesForRole(user,
         UserRoles.RESEARCHER);
     assertNotNull(summaries);
-    assertEquals(4, summaries.size());
+    assertEquals(5, summaries.size());
 
     DarCollectionSummary testOne = summaries.get(0);
     Set<String> expectedOneActions = Set.of(
@@ -606,7 +652,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     );
     assertTrue(
         testOne.getStatus().equalsIgnoreCase(DarCollectionStatus.IN_PROCESS.getValue()));
-    assertEquals(testOne.getActions(), expectedOneActions);
+    assertEquals(expectedOneActions, testOne.getActions());
 
     DarCollectionSummary testTwo = summaries.get(1);
     Set<String> expectedTwoActions = Set.of(
@@ -615,7 +661,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     );
     assertTrue(
         testTwo.getStatus().equalsIgnoreCase(DarCollectionStatus.SUBMITTED.getValue()));
-    assertEquals(testTwo.getActions(), expectedTwoActions);
+    assertEquals(expectedTwoActions, testTwo.getActions());
 
     DarCollectionSummary testThree = summaries.get(2);
     Set<String> expectedThreeActions = Set.of(
@@ -623,23 +669,27 @@ class DarCollectionServiceTest extends AbstractTestHelper {
         DarCollectionActions.REVISE.getValue());
     assertTrue(
         testThree.getStatus().equalsIgnoreCase(DarCollectionStatus.CANCELED.getValue()));
-    assertEquals(testThree.getActions(), expectedThreeActions);
+    assertEquals(expectedThreeActions, testThree.getActions());
 
-    DarCollectionSummary testDraft = summaries.get(3);
+    DarCollectionSummary testFour = summaries.get(3);
+    assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testFour.getStatus());
+    assertEquals(Set.of(DarCollectionActions.REVIEW.getValue()), testFour.getActions());
+
+    DarCollectionSummary testDraft = summaries.get(4);
     Set<String> expectedDraftActions = Set.of(
         DarCollectionActions.RESUME.getValue(),
         DarCollectionActions.DELETE.getValue());
-    assertTrue(
-        testDraft.getStatus().equalsIgnoreCase(DarCollectionStatus.DRAFT.getValue()));
-    assertEquals(testDraft.getActions(), expectedDraftActions);
+    assertEquals(DarCollectionStatus.DRAFT.getValue(), testDraft.getStatus());
+    assertEquals(expectedDraftActions, testDraft.getActions());
   }
 
   @Test
   void testProcessDarCollectionSummariesForAdmin() {
-    //summaryOne -> all elections present and open
-    //summaryTwo -> mix of open elections : absent/non-open elections (in process)
-    //summaryThree -> all canceled elections (Complete)
-    //summaryFour -> no elections (unreviewed)
+    // summaryOne -> all elections present and open
+    // summaryTwo -> mix of open elections : absent/non-open elections (in process)
+    // summaryThree -> all canceled elections (Complete)
+    // summaryFour -> no elections (unreviewed)
+    // summaryFive -> dar collection is a progress report
 
     User user = new User();
     user.setUserId(1);
@@ -693,8 +743,18 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     datasetSeven.setDatasetId(7);
     summaryFour.addDatasetId(datasetSeven.getDatasetId());
 
+    DarCollectionSummary summaryFive = new DarCollectionSummary();
+    {
+      summaryFive.setSubmissionDate(new Timestamp(0));
+      summaryFive.addParentChildRelationship(123, "456");
+      Election election = new Election();
+      election.setElectionId(234);
+      election.setStatus(ElectionStatus.OPEN.getValue());
+      summaryFive.addElection(election);
+    }
+
     when(darCollectionSummaryDAO.getDarCollectionSummariesForAdmin())
-        .thenReturn(List.of(summaryOne, summaryTwo, summaryThree, summaryFour));
+        .thenReturn(List.of(summaryOne, summaryTwo, summaryThree, summaryFour, summaryFive));
 
     List<DarCollectionSummary> summaries = service.getSummariesForRole(user,
         UserRoles.ADMIN);
@@ -727,6 +787,10 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     assertTrue(
         testFour.getStatus().equalsIgnoreCase(DarCollectionStatus.SUBMITTED.getValue()));
     assertEquals(testFour.getActions(), expectedFourActions);
+
+    DarCollectionSummary testFive = summaries.get(4);
+    assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testFive.getStatus());
+    assertTrue(testFive.getActions().isEmpty());
   }
 
   @Test
@@ -851,12 +915,13 @@ class DarCollectionServiceTest extends AbstractTestHelper {
 
   @Test
   void testProcessDarCollectionSummariesForChair() {
-    //summaryOne -> all elections present and open
-    //summaryTwo -> mix of open elections : absent/canceled elections (in process)
-    //summaryThree -> all canceled elections (Complete)
-    //summaryFour -> no elections (unreviewed)
-    //summaryFive -> mix of open : absent/closed elections (in process, but cancel action does not appear)
-    //summarySix -> all closed elections (complete, only open available)
+    // summaryOne -> all elections present and open
+    // summaryTwo -> mix of open elections : absent/canceled elections (in process)
+    // summaryThree -> all canceled elections (Complete)
+    // summaryFour -> no elections (unreviewed)
+    // summaryFive -> mix of open : absent/closed elections (in process, but cancel action does not appear)
+    // summarySix -> all closed elections (complete, only open available)
+    // summarySeven -> dar collection is a progress report
 
     Dac dac = new Dac();
     dac.setDacId(1);
@@ -938,9 +1003,19 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     summarySix.addDatasetId(10);
     summarySix.addDatasetId(11);
 
+    DarCollectionSummary summarySeven = new DarCollectionSummary();
+    {
+      summarySeven.setSubmissionDate(new Timestamp(0));
+      summarySeven.addParentChildRelationship(123, "456");
+      Election election = new Election();
+      election.setElectionId(234);
+      election.setStatus(ElectionStatus.OPEN.getValue());
+      summarySeven.addElection(election);
+    }
+
     when(darCollectionSummaryDAO.getDarCollectionSummariesForDAC(any(), any()))
         .thenReturn(
-            List.of(summaryOne, summaryTwo, summaryThree, summaryFour, summaryFive, summarySix));
+            List.of(summaryOne, summaryTwo, summaryThree, summaryFour, summaryFive, summarySix, summarySeven));
     when(datasetDAO.findDatasetListByDacIds(any())).thenReturn(List.of(datasetOne,
         datasetTwo,
         datasetThree,
@@ -951,7 +1026,7 @@ class DarCollectionServiceTest extends AbstractTestHelper {
 
     List<DarCollectionSummary> summaries = service.getSummariesForRole(user,
         UserRoles.CHAIRPERSON);
-    assertEquals(6, summaries.size());
+    assertEquals(7, summaries.size());
 
     DarCollectionSummary testOne = summaries.get(0);
     Set<String> expectedOneActions = Set.of(
@@ -1001,6 +1076,9 @@ class DarCollectionServiceTest extends AbstractTestHelper {
         testSix.getStatus().equalsIgnoreCase(DarCollectionStatus.COMPLETE.getValue()));
     assertEquals(testSix.getActions(), expectedSixActions);
 
+    DarCollectionSummary testSeven = summaries.get(6);
+    assertEquals(DarCollectionStatus.IN_PROCESS.getValue(), testSeven.getStatus());
+    assertEquals(Set.of(DarCollectionActions.VOTE.getValue()), testSeven.getActions());
   }
 
   @Test
@@ -1216,12 +1294,8 @@ class DarCollectionServiceTest extends AbstractTestHelper {
 
   private DarCollection generateMockDarCollection(Set<Dataset> datasets) {
     DarCollection collection = new DarCollection();
-    Map<String, DataAccessRequest> dars = new HashMap<>();
-    DataAccessRequest darOne = generateMockDarWithDatasetId(datasets);
-    DataAccessRequest darTwo = generateMockDarWithDatasetId(datasets);
-    dars.put(darOne.getReferenceId(), darOne);
-    dars.put(darTwo.getReferenceId(), darTwo);
-    collection.setDars(dars);
+    collection.addDar(generateMockDarWithDatasetId(datasets));
+    collection.addDar(generateMockDarWithDatasetId(datasets));
     return collection;
   }
 
@@ -1243,23 +1317,12 @@ class DarCollectionServiceTest extends AbstractTestHelper {
     return dataset;
   }
 
-  private void initService() {
-    service = new DarCollectionService(darCollectionDAO, darCollectionServiceDAO, datasetDAO,
-        electionDAO, dataAccessRequestDAO, emailService, voteDAO, matchDAO,
-        darCollectionSummaryDAO);
-  }
-
   private List<DarCollection> createMockCollections() {
-    return IntStream.rangeClosed(1, 1)
-        .mapToObj(
-            i -> {
-              DarCollection collection = new DarCollection();
-              collection.setDarCollectionId(i);
-              collection.setDarCode(randomAlphanumeric(5));
-              collection.setCreateUserId(1);
-              return collection;
-            })
-        .toList();
+    DarCollection collection = new DarCollection();
+    collection.setDarCollectionId(1);
+    collection.setDarCode(randomAlphanumeric(5));
+    collection.setCreateUserId(1);
+    return List.of(collection);
   }
 
   private Election createMockElection() {
